end of first draft

--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
 
     
     </main>
-    <footer></footer>
+    <footer><p class="center">Lake Dillon photo by Brent Bewick
+        <a href="mailto:bewickphoto@gmail.com">For info email Brent Bewick </a></p>
+    </footer>
 
-    
+
 </body>
 </html>
