--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
     
     <footer><p class="center">Lake Dillon photo by Brent Bewick
         <a href="mailto:bewickphoto@gmail.com">For info email Brent Bewick </a></p>
+      
     </footer>
-
-
+<section><iframe width="600" height="450" frameborder="0" style="border:0"
+src="https://www.google.com/maps/embed/v1/place?q=place_id:EiQyMDQgQWxwaW5lIERyLCBGcmlzY28sIENPIDgwNDQzLCBVU0E&key=AIzaSyB841CV_piablgGGcDeyoAOSs3GMfBdDWU" allowfullscreen></iframe></section>
 </body>
 </html>
