small test change

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     
     <footer><p class="center">Lake Dillon photo by Brent Bewick
         <a href="mailto:bewickphoto@gmail.com">For info email Brent Bewick </a></p>
-     <p class="center">Find us here!  </p><p class="font center">Please note that this map locates us farther west on alpine than we really are. <br> Aspen Grove is close to the EAST intersection of Alpine and Miners Creek.</p> <p class="center"> <iframe
+     <p class="center">Aspen Groveis here!  </p><p class="font center">Please note that this map locates us farther west on alpine than we really are. <br> Aspen Grove is close to the EAST intersection of Alpine and Miners Creek.</p> <p class="center"> <iframe
   width="400"
   height="200"
   frameborder="0" style="border:0"
